--- a/src/pages/Admin/Products/Products.module.css
+++ b/src/pages/Admin/Products/Products.module.css
@@ -1,8 +1,13 @@
-.about h1{
+.container{
+    width: 700px;
+    margin: 0 auto;
+}
+
+h1{
     text-align: center;
 }
 
-.about{
+.form div{
     display: flex;
     flex-direction: column;
     align-items: center;
